# qr-generator

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg
qrgenerator/: __init__.py
