[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-generator"
version = "1.0.0"
description = "QR Code image generator"
authors = [
	{ name="ChemicalLuck", email="j.tebbett@outlook.com" }
	]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
qrg = qrgenerator:main

