[metadata]
name = qrgenerator
version = 1.0.0
description = QR Code image generator
long_description = file: README.md
author = Joe Tebbett
author_email = j.tebbet@outlook.com
url = https://github.com/chemicalluck/qr-generator
keywords = qr code, qrcode, qr, generator, image
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    qrcode[pil]

python_requires = >= 3.7

[options.entry_points]
console_scripts =
    qrg = qrgenerator:main

